--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "array-tree-filter": "~2.1.0",
     "babel-runtime": "^6.x",
     "normalize-css-color": "^1.0.2",
-    "react-native-codegen": "^0.0.7",
+    "react-native-codegen": "^0.0.7",abel/preset-flow
     "react-native-collapsible": "^1.6.0",
     "react-native-modal-popover": "^2.0.1",
     "shallowequal": "^1.1.0",
@@ -76,6 +76,7 @@
     "cross-env": "^7.0.3",
     "enquire.js": "^2.1.1",
     "eslint": "^7.28.0",
+    "expo": "^42.0.3",
     "glob": "^7.1.1",
     "jest": "^26.6.3",
     "jsonml.js": "^0.1.0",
