--- a/app.json
+++ b/app.json
@@ -2,10 +2,11 @@
   "name": "antd_mobile_rn",
   "displayName": "antd_mobile_rn",
   "expo": {
-    "name":"@ant-design/react-native",
-    "description":"基于蚂蚁金服移动设计规范的 React Native 组件库",
+    "name": "@ant-design/react-native",
+    "slug": "ant-design-mobile-rn",
+    "description": "基于蚂蚁金服移动设计规范的 React Native 组件库",
     "icon": "./rn-kitchen-sink/android/app/src/main/res/mipmap-xhdpi/ic_launcher.png",
-    "version":"4.2.0",
+    "version": "4.2.0",
     "entryPoint": "./expo/App.js"
   }
 }
